<resources>
    <string name="app_name">WishList</string>
    <string name="header">Создадим список подарков!</string>
    <string name="forwho">Для кого будем создавать список?</string>
    <string name="forme">Для себя</string>
    <string name="forother">Для других</string>
    <string name="next">Готово</string>
    <string name="hintName">Введите название списка</string>
    <string name="addList">Создать список</string>
    <string name="addElement">Добавить элемент</string>
    <string name="deleteList">Удалить список</string>
    <string name="addItem">Добавляем элемент списка</string>
    <string name="itemName">Название</string>
    <string name="itemText">Дополнительная информация</string>
    <string name="login">имя пользователя</string>
    <string name="password">пароль</string>
    <string name="log_in">Войти</string>
    <string name="new_user">Зарегистрироваться</string>
</resources>
