<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddListActivity">

    <TextView
        android:id="@+id/forWhoText"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="457dp"
        android:text="@string/forwho"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="414dp"
        android:layout_height="46dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="579dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/forMeCheck"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="375dp"
        android:text="@string/forme"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/forOtherCheck"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="295dp"
        android:text="@string/forother"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="133dp"
        android:layout_height="63dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="128dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <EditText
        android:id="@+id/addListName"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="457dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="229dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>